shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_build_upload_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_parse_create_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_parse_poll_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_parse_upload_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_azure_mai_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_azure_mai_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_build_health_request(RustBuffer provider, RustBuffer api_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_build_health_request_with_base(RustBuffer provider, RustBuffer api_key, RustBuffer base_url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_build_system_info(RustBuffer ctx, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_build_system_prompt(RustBuffer ctx, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_classify_error(uint16_t status, RustBuffer body, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_default_model(RustBuffer id, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_cloud_pp_is_enabled(RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_llm_model_header(RustBuffer id, RustBuffer model_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_llm_provider(RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_model(RustBuffer id, RustBuffer model_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_models(RustBuffer id, RustCallStatus *_Nonnull out_status
);
double uniffi_hyperwhisper_core_fn_func_cloud_stt_credits_per_minute(RustBuffer id, RustCallStatus *_Nonnull out_status
);
double uniffi_hyperwhisper_core_fn_func_cloud_stt_credits_per_minute_for_model(RustBuffer id, RustBuffer model_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_custom_vocabulary_field_name(RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_default_model_id(RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_language_codes(RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_models(RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_normalize_cloud_provider(RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_provider(RustBuffer id, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_cloud_stt_supports_custom_vocabulary(RustBuffer id, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_contains_cjk(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_deepgram_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_deepgram_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_elevenlabs_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_elevenlabs_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_english_spelling_from_raw(RustBuffer raw, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_extract_cleaned_from_wrapped(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_finalize_streaming_text(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_delete_request(RustBuffer params, RustBuffer name, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_generate_request(RustBuffer params, RustBuffer file, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_poll_request(RustBuffer params, RustBuffer name, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_prompt(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_upload_bytes_request(RustBuffer params, RustBuffer upload_url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_upload_start_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_generate_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_poll_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_upload_bytes_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_upload_start_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_google_chirp_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_google_chirp_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_grok_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_grok_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);