shared-core-rs/bindings/csharp/hyperwhisper_core.cs


    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_build_upload_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_parse_create_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_parse_poll_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_parse_upload_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_azure_mai_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_azure_mai_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_build_health_request(RustBuffer @provider,RustBuffer @apiKey,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_build_health_request_with_base(RustBuffer @provider,RustBuffer @apiKey,RustBuffer @baseUrl,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_build_system_info(RustBuffer @ctx,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_build_system_prompt(RustBuffer @ctx,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_classify_error(ushort @status,RustBuffer @body,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_default_model(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_cloud_pp_is_enabled(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_llm_model_header(RustBuffer @id,RustBuffer @modelId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_llm_provider(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_model(RustBuffer @id,RustBuffer @modelId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_pp_models(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern double uniffi_hyperwhisper_core_fn_func_cloud_stt_credits_per_minute(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern double uniffi_hyperwhisper_core_fn_func_cloud_stt_credits_per_minute_for_model(RustBuffer @id,RustBuffer @modelId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_custom_vocabulary_field_name(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_default_model_id(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_language_codes(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_models(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_normalize_cloud_provider(RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_cloud_stt_provider(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_cloud_stt_supports_custom_vocabulary(RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_contains_cjk(RustBuffer @text,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_deepgram_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_deepgram_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_elevenlabs_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_elevenlabs_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_english_spelling_from_raw(RustBuffer @raw,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_extract_cleaned_from_wrapped(RustBuffer @text,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_finalize_streaming_text(RustBuffer @text,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_delete_request(RustBuffer @params,RustBuffer @name,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_generate_request(RustBuffer @params,RustBuffer @file,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_poll_request(RustBuffer @params,RustBuffer @name,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_prompt(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_upload_bytes_request(RustBuffer @params,RustBuffer @uploadUrl,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_build_upload_start_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_generate_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_poll_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_upload_bytes_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_gemini_parse_upload_start_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_google_chirp_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_google_chirp_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_grok_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_grok_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );
